# game-genie

./: README.md  __main__.py  pyproject.toml  test.py
.github/workflows/: python-publish.yml
fm/: __main__.py
game_genie/: __main__.py  requirements
game_genie/research/: mainWindow.py
game_genie/template/game/: __main__.py  game  game.cpp  gameobject.cpp  main  main.cpp  scene.cpp
game_genie/template/game/scene_0/: __init__.py  __main__.py
game_genie/template/game/scene_1/: __init__.py  goManager.cpp  main.cpp  scene.cpp  sceneManager.cpp
game_genie/template/game/scene_1/go_0/: object.cpp
gui/: __main__.py
gui/canvas/: __main__.py
gui/inspector/: __main__.py
research/demo_rotateCube/: 2.py
src/game_genie/: 4  implementantations.py  test.py
src/game_genie/Engine/Transform/: __init__.py
src/game_genie/gui/canvas/: __main__.py
src/game_genie/research/demo_rotateCube/: 1.py
src/game_genie/template/game/: __main__.py
src/game_genie/template/game/assets/scenes/scene_0/: start.py  update.py
src/game_genie/template/game/assets/scenes/scene_0/gameobjects/0/: start.py
template/: config.ini
template/assets/scenes/0/: __init__.py  __main__.py
template/assets/scenes/0/gameobjects/0/: __loop__.py  __main__.py
template/assets/scenes/0/gameobjects/0/components/: render.ini  transform.ini
template/game/: __main__.py
template/game/assets/scenes/0/: __loop__.py
template/game/assets/scenes/0/gameobjects/0/components/graph-renderer/: 0
template/game/assets/scenes/scene_0/: __main__.py
